src/main/java/com/example/studybuddy/errors/SessionNotFound.java
package com.example.studybuddy.errors;

public class SessionNotFound extends RuntimeException {
    public SessionNotFound(Long id) {
        super("Session not found: " + id);
    }
}
